Se hicieron cambios en la página

--- a/css/main.css
+++ b/css/main.css
@@ -2087,7 +2087,7 @@ body {
 }
 
 .hero-area {
-  background: url(../img/header.jpg) no-repeat right/contain;
+  background: url(../img/DSC1183.jpg) no-repeat right/contain;
   background-size: cover;
 }
 
